--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .gradle
-/build/
+build/
+.idea/
+out/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +14,4 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+userHome/
