Update jenkins pipeline used

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // Use the latest Groovy version for building this library
     implementation 'org.codehaus.groovy:groovy-all:2.5.13'
 
+    implementation gradleApi()
+
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
 
