--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ plugins {
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'io.codearte.nexus-staging' version '0.30.0'
     id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id 'nebula.release' version '15.3.1'
 }
 
 group 'com.wooga.gradle'
