--- a/build.gradle
+++ b/build.gradle
@@ -16,32 +16,19 @@
  */
 
 plugins {
-    id 'groovy'
     id 'java-library'
+    id 'groovy'
     id 'maven-publish'
     id 'signing'
+    id 'nebula.release' version '15.2.0'
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'io.codearte.nexus-staging' version '0.30.0'
     id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
-    id 'nebula.release' version '15.3.1'
 }
 
 group 'com.wooga.gradle'
 description = 'A library to provide reusable components and utilities for our gradle projects.'
-
-sourceSets {
-    main {
-        groovy {
-            srcDirs = ['lib/src/main/groovy']
-        }
-    }
-    test {
-        groovy {
-            srcDirs = ['lib/src/test/groovy']
-        }
-    }
-}
 
 repositories {
     mavenCentral()
@@ -78,17 +65,25 @@ java {
     withSourcesJar()
 }
 
-nexusStaging {
-    username = project.hasProperty('ossrhUsername') ? project.property('ossrhUsername') : System.getenv('OSSRH_USERNAME')
-    password = project.hasProperty('ossrhPassword') ? project.property('ossrhPassword') : System.getenv('OSSRH_PASSWORD')
-    packageGroup = "com.wooga"
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            username = project.hasProperty('ossrhUsername') ? project.property('ossrhUsername') : System.getenv('OSSRH_USERNAME')
+            password = project.hasProperty('ossrhPassword') ? project.property('ossrhPassword') : System.getenv('OSSRH_PASSWORD')
+        }
+    }
 }
 
 publishing {
     publications {
-        main(MavenPublication) {
-            artifactId = project.name
-
+        it.create("main", MavenPublication) {MavenPublication publication ->
             from(components["java"])
 
             pom {
@@ -123,7 +118,6 @@ publishing {
         }
     }
 }
-
 
 signing {
     def signingKeyId = project.hasProperty("signingKeyId") ? project.property('signingKeyId') : System.getenv('OSSRH_SIGNING_KEY_ID')
