--- a/build.gradle
+++ b/build.gradle
@@ -29,18 +29,18 @@ plugins {
 group 'com.wooga.gradle'
 description = 'A library to provide reusable components and utilities for our gradle projects.'
 
-sourceSets {
-    main {
-        groovy {
-            srcDirs = ['lib/src/main/groovy']
-        }
-    }
-    test {
-        groovy {
-            srcDirs = ['lib/src/test/groovy']
-        }
-    }
-}
+//sourceSets {
+//    main {
+//        groovy {
+//            srcDirs = ['lib/src/main/groovy']
+//        }
+//    }
+//    test {
+//        groovy {
+//            srcDirs = ['lib/src/test/groovy']
+//        }
+//    }
+//}
 
 repositories {
     mavenCentral()
@@ -48,10 +48,9 @@ repositories {
 
 dependencies {
 
-    implementation 'org.codehaus.groovy:groovy-all:2.5.13'
-
+    //implementation 'org.codehaus.groovy:groovy-all:2.5.12'
+    implementation 'org.codehaus.groovy:groovy-all:[2.5,3)'
     implementation gradleApi()
-
     implementation 'com.google.guava:guava:29.0-jre'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
