--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,7 @@ repositories {
 }
 
 dependencies {
-
-    //implementation 'org.codehaus.groovy:groovy-all:2.5.12'
-    implementation 'org.codehaus.groovy:groovy-all:[2.5,3)'
+    implementation localGroovy()
     implementation gradleApi()
     implementation 'com.google.guava:guava:29.0-jre'
 
