--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,11 @@ publishing {
                         name = 'Manfred Endres'
                         email = 'manfred.endres@wooga.net'
                     }
+                    developer {
+                        id = 'christian.sagel'
+                        name = 'Christian Sagel'
+                        email = 'christian.sagel@wooga.net'
+                    }
                 }
             }
         }
