--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ dependencies {
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.13'
+    // TODO: Figure out how to use the same ones as others?
+    testImplementation('com.netflix.nebula:nebula-test:[8,9)') {
+        version {
+            strictly '8.1.0'
+        }
+    }
+    testImplementation 'com.github.stefanbirkner:system-rules:1.18.0'
 
     api 'org.apache.commons:commons-math3:3.6.1'
 }
