Fix missing/wrong gradle property annotations
Description
===========

Gradle is very picky when it comes to the correct way
of declaring properties for tasks. Our `BaseSpec` uses
`@Inject` getters which are not allowed to also carry `@Internal`
annotations.

I also added the missing annoation for `getArguments` in `ArgumentSpec`

Last but not least I added a validation task from the gradle
`gradle-java-plugin` plugin to validate our mocked plugin/task classes.

Changes
=======

* ![FIX] incorrect property annotations in `BaseSpec`
* ![FIX] missing property annotation for `getArguments` in `ArgumentsSpec`
* ![IMPROVE] gradle property annotiation checks with task `validateMockedPlugins`

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,25 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 }
 
+JavaPluginConvention javaConvention = (JavaPluginConvention)project.getConvention().getPlugin(JavaPluginConvention.class);
+SourceSet sourceSet = javaConvention.getSourceSets().getByName("test")
+
+TaskProvider<ValidatePlugins> validatorTask = tasks.register("validateMockedPlugins", ValidatePlugins) { task ->
+    task.setGroup("Plugin development");
+    task.setDescription("Validates the mocked plugins by checking parameter annotations on mocked task and artifact transform types etc.");
+    task.getOutputFile().set(layout.getBuildDirectory().file("reports/plugin-development/validation-report.txt"));
+    task.getClasses().setFrom(provider {
+        return sourceSet.getOutput().getClassesDirs();
+    })
+    task.getClasspath().setFrom(provider {
+        return sourceSet.getCompileClasspath();
+    })
+}
+
+tasks.named("check", {
+    it.dependsOn(validatorTask)
+})
+
 // TODO: Remove in the future when nebule-release is removed
 List<String> cliTasks = project.rootProject.gradle.startParameter.taskNames
 if (cliTasks.contains("rc")) {
