--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,9 @@ dependencies {
         }
     }
     testImplementation 'com.github.stefanbirkner:system-rules:1.18.0'
-    testImplementation 'com.wooga.gradle:gradle-commons-test:[1,2)'
+    testImplementation('com.wooga.gradle:gradle-commons-test:[1,2)') {
+        exclude module: "gradle-commons", group: "com.wooga.gradle"
+    }
 
     api 'org.apache.commons:commons-math3:3.6.1'
 }
