--- a/build.gradle
+++ b/build.gradle
@@ -35,19 +35,19 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation localGroovy()
     implementation gradleApi()
     implementation 'com.google.guava:guava:30.0-jre'
 
-    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
+    testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'
     // TODO: Figure out how to use the same ones as others?
-    testImplementation('com.netflix.nebula:nebula-test:[8,9)') {
-        version {
-            strictly '8.1.0'
-        }
-    }
+    testImplementation 'com.netflix.nebula:nebula-test:[10,11)'
     testImplementation 'com.github.stefanbirkner:system-rules:1.18.0'
     testImplementation('com.wooga.gradle:gradle-commons-test:[1,2)') {
         exclude module: "gradle-commons", group: "com.wooga.gradle"
@@ -60,8 +60,8 @@ snyk {
     projectEnvironment = "distributed"
 }
 
-JavaPluginConvention javaConvention = (JavaPluginConvention)project.getConvention().getPlugin(JavaPluginConvention.class);
-SourceSet sourceSet = javaConvention.getSourceSets().getByName("test")
+def javaConvention = project.extensions.findByType(JavaPluginExtension)
+def sourceSet = javaConvention.sourceSets.getByName("test")
 
 TaskProvider<ValidatePlugins> validatorTask = tasks.register("validateMockedPlugins", ValidatePlugins) { task ->
     task.setGroup("Plugin development");
